<resources>
    <string name="app_name" translatable="false">Boxfish</string>
    <string name="app_name_description">Universal proxy toolchain</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="confirm_save">Save changes</string>
    <string name="confirm_save_changes">Do you want to save changes to the configuration?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="notification_action_stop">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="notification_action_more">click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Configuration file</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import from QR-Code</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_manually_vmess">VMess</string>
    <string name="menu_item_import_config_manually_vless">VLESS</string>
    <string name="menu_item_import_config_manually_ss">Shadowsocks</string>
    <string name="menu_item_import_config_manually_socks">SOCKS</string>
    <string name="menu_item_import_config_manually_http">HTTP</string>
    <string name="menu_item_import_config_manually_trojan">Trojan</string>
    <string name="menu_item_import_config_manually_wireguard">Wireguard</string>
    <string name="menu_item_import_config_manually_hysteria2">Hysteria2</string>
    <string name="menu_item_import_config_custom">Custom config</string>
    <string name="menu_item_import_config_custom_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_custom_local">Import from locally</string>
    <string name="menu_item_import_config_custom_url">Import from URL</string>
    <string name="menu_item_import_config_custom_url_scan">Import from QR-Code</string>
    <string name="del_config_confirm">Confirm delete</string>
    <string name="del_config_confirm_title">Confirm delete</string>
    <string name="del_config_confirm_current">Are you sure you want to remove the current configuration?</string>
    <string name="del_config_confirm_this">Are you sure you want to delete %s configuration?</string>
    <string name="del_config_confirm_all">Are you sure you want to remove all configurations?</string>
    <string name="del_config_confirm_invalid">Are you sure you want to remove all invalid configurations? Please test before deleting!</string>
    <string name="del_config_confirm_duplicate">Are you sure you want to remove duplicate configurations?</string>
    <string name="server_lab_remarks">Remarks</string>
    <string name="server_lab_address">Address</string>
    <string name="server_lab_port">Port</string>
    <string name="server_lab_id">ID</string>
    <string name="server_lab_alterid">AlterId</string>
    <string name="server_lab_security">Security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">Head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">Host</string>
    <string name="server_lab_request_host_http">HTTP host</string>
    <string name="server_lab_request_host_ws">WS host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_splithttp">splithttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="menu_item_add_asset">Add asset</string>
    <string name="menu_item_add_file">Add files</string>
    <string name="menu_item_add_url">Add URL</string>
    <string name="menu_item_download_file">Download files</string>
    <string name="menu_item_search">Search</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_vpn_settings">VPN Settings</string>
    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="summary_pref_per_app_proxy">General: Checked App is proxy, unchecked direct connection; \nbypass mode: checked app directly connected, unchecked proxy. \nThe option to automatically select the proxy application in the menu</string>
    <string name="title_pref_is_booted">Auto connect at startup</string>
    <string name="summary_pref_is_booted">Automatically connects to the selected server at startup, which may be unsuccessful</string>
    <string name="title_mux_settings">Mux Settings</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="summary_pref_mux_enabled">Faster, but it may cause unstable connectivity\ncustomize how to handle TCP, UDP and QUIC below</string>
    <string name="title_pref_mux_concurrency">TCP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_concurrency">XUDP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_quic">Handling of QUIC in mux tunnel</string>
    <string name="title_pref_speed_enabled">Enable speed display</string>
    <string name="summary_pref_speed_enabled">Display current speed in the notification.\nNotification icon would change based on
        usage.</string>
    <string name="title_pref_sniffing_enabled">Enable Sniffing</string>
    <string name="summary_pref_sniffing_enabled">Try sniff domain from the packet (default on)</string>
    <string name="title_pref_route_only_enabled">Enable routeOnly</string>
    <string name="summary_pref_route_only_enabled">Use the sniffed domain name for routing only, and keep the target address as the IP address.</string>
    <string name="title_pref_local_dns_enabled">Enable local DNS</string>
    <string name="summary_pref_local_dns_enabled">DNS processed by core‘s DNS module (Recommended, if need routing Bypassing LAN and
        mainland address)</string>
    <string name="title_pref_fake_dns_enabled">Enable fake DNS</string>
    <string name="summary_pref_fake_dns_enabled">local DNS returns fake IP address (faster, but it may not work for some apps)</string>
    <string name="title_pref_prefer_ipv6">Prefer IPv6</string>
    <string name="summary_pref_prefer_ipv6">Prefer IPv6 address and routes</string>
    <string name="title_pref_remote_dns">Remote DNS (udp/tcp/https/quic)(Optional)</string>
    <string name="summary_pref_remote_dns">DNS</string>
    <string name="title_pref_vpn_dns">VPN DNS (only IPv4/v6)</string>
    <string name="title_pref_domestic_dns">Domestic DNS (Optional)</string>
    <string name="summary_pref_domestic_dns">DNS</string>
    <string name="title_pref_delay_test_url">True delay test url (http/https)</string>
    <string name="summary_pref_delay_test_url">Url</string>
    <string name="title_pref_proxy_sharing_enabled">Allow connections from the LAN</string>
    <string name="summary_pref_proxy_sharing_enabled">Other devices can connect to proxy by your ip address through socks/http, Only enable in trusted network to avoid unauthorized connection</string>
    <string name="title_pref_allow_insecure">allowInsecure</string>
    <string name="summary_pref_allow_insecure">When TLS, the default allowInsecure</string>
    <string name="title_pref_socks_port">SOCKS5 proxy port</string>
    <string name="title_pref_http_port">HTTP proxy port</string>
    <string name="title_pref_local_dns_port">Local DNS port</string>
    <string name="title_pref_confirm_remove">Delete configuration file confirmation</string>
    <string name="summary_pref_confirm_remove">Whether to delete the configuration file requires a second confirmation by the user</string>
    <string name="title_pref_start_scan_immediate">Start scanning immediately</string>
    <string name="summary_pref_start_scan_immediate">Open the camera to scan immediately at startup, otherwise you can choose to scan the code or select a photo in the toolbar</string>
    <string name="title_about">About</string>
    <string name="title_pref_feedback">Feedback</string>
    <string name="title_tg_channel">Telegram Channel</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_source_code">Source Code</string>
    <string name="title_configuration_backup">Backup Configuration</string>
    <string name="summary_configuration_backup">Location: [%s]. \nBackup deletes on app uninstall or storage clear.</string>
    <string name="title_configuration_restore">Restore Configuration</string>
    <string name="title_configuration_share">Share Configuration</string>
    <string name="title_pref_auto_update_subscription">Automatic update subscriptions</string>
    <string name="summary_pref_auto_update_subscription">Update your subscriptions automatically with an interval in background. Depending on the device, this feature may not always work</string>
    <string name="title_pref_auto_update_interval">Auto Update Interval (Minutes, Min value 15)</string>
    <string name="title_core_log_level">Log Level</string>
    <string name="title_mode">Mode</string>
    <string name="title_language">Language</string>
    <string name="title_ui_settings">UI settings</string>
    <string name="title_pref_ui_mode_night">UI mode settings</string>
    <string name="title_service_restart">Restart Boxfish</string>
    <string name="title_del_all_config">All configs</string>
    <string name="title_del_duplicate_config">Duplicate configs</string>
    <string name="title_del_invalid_config">Invalid configs</string>
    <string name="title_export_all">Export to clipboard</string>
    <string name="title_sub_setting">Subscription groups</string>
    <string name="title_sub_update">Update subscription</string>
    <string name="title_ping_all_server">TCPing</string>
    <string name="title_real_ping_all_server">Real delay</string>
    <string name="title_user_asset_setting">Geo asset files</string>
    <string name="title_sort_by_test_results">Sorting by test results</string>
    <string name="routing_settings_add_rule">Add rule</string>
    <string name="routing_settings_import_rulesets">Import ruleset</string>
    <string name="routing_settings_import_rulesets_from_clipboard">Import from clipboard</string>
    <string name="routing_settings_export_rulesets_to_clipboard">Export to clipboard</string>
    <string name="title_fragment_settings">Fragment Settings</string>
    <string name="title_pref_fragment_packets">Fragment Packets</string>
    <string name="title_pref_fragment_length">Fragment Length (min-max)</string>
    <string name="title_pref_fragment_interval">Fragment Interval (min-max)</string>
    <string name="title_pref_fragment_enabled">Enable Fragment</string>
    <string name="menu_item_delete_configs">Delete</string>
    <string name="menu_item_tests_configs">Connection tests</string>
    <string name="menu_item_manually_add_configs">Add manually</string>
    <string name="menu_item_more">More</string>
</resources>