<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_search_24"
        android:title="@string/menu_item_search"
        app:searchViewStyle="?attr/materialSearchBarStyle"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:icon="@drawable/ic_add_circle_24"
        android:title="@string/menu_item_add_config"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/import_qrcode"
                android:icon="@drawable/ic_qr_code_24"
                android:title="@string/menu_item_import_config_qrcode"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_clipboard"
                android:icon="@drawable/ic_content_paste_export_24"
                android:title="@string/menu_item_import_config_clipboard"
                app:showAsAction="never" />

            <item
                android:icon="@drawable/ic_add_24"
                android:title="@string/menu_item_manually_add_configs"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/import_manually_vmess"
                        android:icon="@drawable/ic_protocol_vmess_24"
                        android:title="@string/menu_item_import_config_manually_vmess"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_manually_vless"
                        android:icon="@drawable/ic_protocol_vless_24"
                        android:title="@string/menu_item_import_config_manually_vless"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_manually_ss"
                        android:icon="@drawable/ic_protocol_shadowsocks_24"
                        android:title="@string/menu_item_import_config_manually_ss"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_manually_socks"
                        android:icon="@drawable/ic_protocol_socks_24"
                        android:title="@string/menu_item_import_config_manually_socks"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_manually_http"
                        android:icon="@drawable/ic_protocol_http_24"
                        android:title="@string/menu_item_import_config_manually_http"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_manually_trojan"
                        android:icon="@drawable/ic_protocol_trojan_24"
                        android:title="@string/menu_item_import_config_manually_trojan"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_manually_wireguard"
                        android:icon="@drawable/ic_protocol_wireguard_24"
                        android:title="@string/menu_item_import_config_manually_wireguard"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_manually_hysteria2"
                        android:icon="@drawable/ic_protocol_hysteria2_24"
                        android:title="@string/menu_item_import_config_manually_hysteria2"
                        app:showAsAction="never" />
                </menu>
            </item>
            <item
                android:icon="@drawable/ic_tune_24"
                android:title="@string/menu_item_import_config_custom"
                app:showAsAction="always">
                <menu>
                    <item
                        android:id="@+id/import_config_custom_clipboard"
                        android:icon="@drawable/ic_content_paste_export_24"
                        android:title="@string/menu_item_import_config_custom_clipboard"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_local"
                        android:icon="@drawable/ic_file_present_24"
                        android:title="@string/menu_item_import_config_custom_local"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url"
                        android:icon="@drawable/ic_link_24"
                        android:title="@string/menu_item_import_config_custom_url"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url_scan"
                        android:icon="@drawable/ic_qr_code_24"
                        android:title="@string/menu_item_import_config_custom_url_scan"
                        app:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_more_vert_24"
        android:title="@string/menu_item_more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/service_restart"
                android:icon="@drawable/ic_restart_alt_24"
                android:title="@string/title_service_restart"
                app:showAsAction="never" />
            <item
                android:icon="@drawable/ic_delete_24"
                android:title="@string/menu_item_delete_configs"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/del_all_config"
                        android:title="@string/title_del_all_config"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/del_duplicate_config"
                        android:title="@string/title_del_duplicate_config"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/del_invalid_config"
                        android:title="@string/title_del_invalid_config"
                        app:showAsAction="never" />
                </menu>
            </item>
            <item
                android:icon="@drawable/ic_network_ping_24"
                android:title="@string/menu_item_tests_configs"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/ping_all"
                        android:icon="@drawable/ic_network_ping_24"
                        android:title="@string/title_ping_all_server"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/real_ping_all"
                        android:icon="@drawable/ic_link_24"
                        android:title="@string/title_real_ping_all_server"
                        app:showAsAction="never" />
                </menu>
            </item>
            <item
                android:id="@+id/export_all"
                android:icon="@drawable/ic_content_paste_24"
                android:title="@string/title_export_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_test_results"
                android:icon="@drawable/ic_sort_24"
                android:title="@string/title_sort_by_test_results"
                app:showAsAction="never" />
            <item
                android:id="@+id/sub_update"
                android:icon="@drawable/ic_update_24"
                android:title="@string/title_sub_update"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>